--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,7 @@ code {
 .cormorant {
   font-family: "Cormorant Upright", serif;
 }
+
+.instrument-sans {
+  font-family: "Instrument Sans", sans-serif;
+}
